Add auth test boilerplate and initial codegen
