# backend/models/question.go
@@ -1,0 +1,119 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"strconv"
+
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Question question
+// swagger:model question
+type Question struct {
+
+	// answers
+	// Max Items: 8
+	// Min Items: 8
+	Answers []*Answer `json:"answers"`
+
+	// id
+	// Read Only: true
+	ID int64 `json:"id,omitempty"`
+
+	// text
+	// Required: true
+	// Min Length: 1
+	Text *string `json:"text"`
+}
+
+// Validate validates this question
+func (m *Question) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAnswers(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateText(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Question) validateAnswers(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Answers) { // not required
+		return nil
+	}
+
+	iAnswersSize := int64(len(m.Answers))
+
+	if err := validate.MinItems("answers", "body", iAnswersSize, 8); err != nil {
+		return err
+	}
+
+	if err := validate.MaxItems("answers", "body", iAnswersSize, 8); err != nil {
+		return err
+	}
+
+	for i := 0; i < len(m.Answers); i++ {
+		if swag.IsZero(m.Answers[i]) { // not required
+			continue
+		}
+
+		if m.Answers[i] != nil {
+			if err := m.Answers[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("answers" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *Question) validateText(formats strfmt.Registry) error {
+
+	if err := validate.Required("text", "body", m.Text); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("text", "body", string(*m.Text), 1); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Question) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Question) UnmarshalBinary(b []byte) error {
+	var res Question
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
