# backend/restapi/operations/controller/auth_test_swagger_parameters.go
@@ -1,0 +1,45 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package controller
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// NewAuthTestParams creates a new AuthTestParams object
+// no default values defined in spec.
+func NewAuthTestParams() AuthTestParams {
+
+	return AuthTestParams{}
+}
+
+// AuthTestParams contains all the bound params for the auth test operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters authTest
+type AuthTestParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewAuthTestParams() beforehand.
+func (o *AuthTestParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
